--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -38,7 +38,7 @@
    height: 90vh;
    color: white
  }
- .featured h1{
+ .featured, .about h1{
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    letter-spacing: 1mm;
    font-weight: lighter;
@@ -212,3 +212,69 @@
             transform-origin: top;
   }
 }
+
+.gal {
+	
+	-ms-column-count: 3; 
+	-webkit-column-count: 3; /* Chrome, Safari, Opera */
+    -moz-column-count: 3; /* Firefox */
+    column-count: 3;
+	  
+	
+	}	
+	.gal img{ width: 100%; padding: 7px 0;}
+@media (max-width: 500px) {
+		
+		.gal {
+	
+	
+	-ms-column-count: 1; 
+	-webkit-column-count: 1; /* Chrome, Safari, Opera */
+    -moz-column-count: 1; /* Firefox */
+    column-count: 1;
+	  
+	
+	}
+		
+	}
+  .galary{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(241, 240, 240);
+    width: 100vw;
+  }
+  .c{
+    width: 90vw !important;
+    margin: auto;
+  }
+  .galary h1{
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    letter-spacing: 1mm;
+    font-weight: lighter;
+  }
+  .stat img{
+    height: 10vh;
+  }
+  .client img{
+    height: 10vh;
+    width: 10vw;
+  }
+  .client {
+    display: grid;
+    grid-template-columns: 10% 10% 10% 10% 10% 10% 10%;
+    height: 15vh;
+    grid-gap: 2em;
+    background-color: rgb(41, 39, 39);
+  }
+  .about{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: justify;
+    background-color: #2e2f42;
+    width: 100vw;
+    height: 90vh;
+    color: white
+  }
